# Doice

./: .gitignore  Cargo.toml  LICENSE  README.md  ideas.txt  release-new.nu  update-clean.bat
doice_lib/: Cargo.toml
doice_lib/dnd_data/: Cargo.toml
doice_lib/dnd_data/src/: class.rs  feat.rs  item.rs  lib.rs  spell.rs
doice_lib/dnd_data/src/character/: alignment.rs  field_interpret.rs  inventory.rs  mod.rs  state_variable.rs  stats_skills.rs
doice_lib/dnd_data/src/data/own/: character-interpret.json
doice_lib/doice_gui/: Cargo.toml
doice_lib/doice_gui/src/: activity_host.rs  application.rs  lib.rs  show_trait.rs  tailored_frames.rs
doice_lib/doice_gui/src/components/: character_sheet.rs  dice_docs.rs  dice_grapher.rs  dice_history.rs  initiator.rs  mod.rs  wide_grapher.rs
doice_lib/doice_legacy/: Cargo.toml
doice_lib/doice_legacy/src/: lib.rs
doice_lib/doice_prob/: Cargo.toml
doice_lib/doice_prob/src/: chance.rs  lib.rs  numerics.rs  stoch_error.rs
doice_lib/doice_prob/src/distributions/: generic_dist.rs  mod.rs  sample_dist.rs
doice_lib/doice_roller/: Cargo.toml
doice_lib/doice_roller/benches/: parse.rs
doice_lib/doice_roller/src/: bruteforce.rs  dice_error.rs  dice_roller.rs  error.rs  layouter.rs  legacy.rs  lib.rs  prob_dist.rs  sample_dist.rs  test.rs  utils.rs
doice_lib/doice_roller/src/dice_adapters/: keep_highest.rs  mod.rs  reroll_eq.rs
doice_lib/doice_roller/src/functions/: add_nonzero.rs  adv.rs  attack.rs  bernoulli.rs  betting_magic.rs  blackjack.rs  crit.rs  empower.rs  mirror.rs  mod.rs  outcomes.rs  panic.rs  poisson.rs  stat_roll.rs  sum.rs  unit_dick.rs
doice_lib/doice_roller/src/structure/: expression.rs  lin_comb.rs  literal.rs  mod.rs  nop.rs  num_expresson.rs  parenth.rs  term.rs
doice_lib/doice_utils/: Cargo.toml
doice_lib/doice_utils/benches/: par-exec.rs
doice_lib/doice_utils/src/: lib.rs  search.rs  ser_exec.rs  tuple_swap.rs
doice_lib/doice_utils/src/par_exec/: actually_par.rs  mod.rs  proc_config.rs  ser_exec.rs
doice_lib/src/: activity_host.rs  character_manager.rs  dice_roller.rs  global_analyzer.rs  legacy_dice_roller.rs  lib.rs  notes.rs  starfury.rs  tailored_frames.rs
doice_lib/src/activities/: dice_roller.rs  dicerollpreset_gui_test.rs  global_analyzer.rs  legacy_dice_roller.rs  mod.rs  spell_browser.rs  wide_analyzer.rs
old_stuff/: dnd_character.rs  interpret.rs  old.rs
old_stuff/clinterface/: core.rs  menus.rs  mod.rs  msg.rs
old_stuff/clinterface/activities/: character_loader.rs  dice_console.rs  dungeon_gen.rs  mod.rs  rainworms.rs  starfury.rs
pre-releases/DoiceOS/: DoiceOS-0.1 - Shortcut.lnk
src/: clinterface.rs  dice_rolls.rs  dnd_character.rs  interpret.rs  main.rs  old.rs
src/clinterface/: core.rs  menus.rs  mod.rs
src/clinterface/activities/: character_loader.rs  dice_console.rs  dungeon_gen.rs  mod.rs  rainworms.rs  rollers.rs  starfury.rs
