[package]
name = "doice"
version = "0.2.6"
authors = ["Marijn Buitenweg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "doice_lib/dnd_data",
    "doice_lib/doice_gui",
    "doice_lib/doice_roller",
    "doice_lib/doice_utils",
    "doice_lib/doice_legacy",
    "doice_lib",
    "bin/doice_wasm",
    "bin/doice_smol",
    "bin/doice_OS",
]

[workspace.dependencies]
egui = "0.24.1"
egui_extras = "0.24.2"
egui_plot = "0.24.1"
dyn-clone = "1.0.14"
rand = { version = "0.8.5", features = ["nightly"] }
instant = "0.1.12"
strsim = "0.10.0"
rayon = { version = "1.5.3" }
itertools = "0.12.0"
getrandom = "0.2.7"
egui_dnd = "0.5.1"
eframe = "0.24.1"
serde = { version = "1.0.138", features = ["derive", "unstable"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
serde_yaml = "0.9.16"
include_dir = "0.7.2"
bitflags = "2.4.1"
criterion = "0.5.1"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
doice_lib = { version = "0.1.0", path = "doice_lib", features = [
    "rayon",
    "include_data",
    "eframe",
] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "test"
harness = false

[profile.release]
strip = true
lto = "fat"
