[package]
name = "doice_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rayon = ["doice_gui/rayon", "doice_utils/rayon"]
include_data = ["doice_gui/include_data"]
eframe = ["doice_gui/eframe"]
wasm_comp = [
    "doice_legacy/wasm_comp",
    "doice_gui/wasm_comp",
    "doice_utils/wasm_comp",
]

[dependencies]
doice_gui = { version = "0.1.0", path = "doice_gui" }
doice_legacy = { version = "0.1.0", path = "doice_legacy" }
doice_utils = { version = "0.1.0", path = "doice_utils" }
dyn-clone = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
rand = { workspace = true, features = ["nightly"] }
instant = { workspace = true }
