[package]
name = "dnd_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
include_data = []
wasm_comp = []

[dependencies]
bitflags = "1.3.2"
doice_utils = { version = "0.1.0", path = "../doice_utils" }
egui = "0.20.1"
include_dir = "0.7.2"
#instant = { git = "https://github.com/sebcrozet/instant", version = "0.1.12", features = ["wasm-bindgen"], optional = true }
itertools = "0.10.3"
rayon = { version = "1.5.3", optional = true }
serde = { version = "1.0.138", features = ["derive", "unstable"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
serde_yaml = "0.9.16"
