[package]
name = "dnd_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
include_data = []
wasm_comp = []

[dependencies]
bitflags = { workspace = true }
doice_utils = { version = "0.1.0", path = "../doice_utils" }
egui = { workspace = true }
include_dir = { workspace = true }
#instant = { git = "https://github.com/sebcrozet/instant", version = "0.1.12", features = ["wasm-bindgen"], optional = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "unstable"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
