[package]
name = "doice_legacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm_comp = ["getrandom/js"]

[dependencies]
getrandom = { workspace = true }
rand = { workspace = true, features = ["nightly"] }
