[package]
name = "doice_prob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doice_utils = { version = "0.1.0", path = "../doice_utils" }
rand = { version = "0.8.5", features = ["nightly", "simd_support"] }
itertools = "0.10.3"
getrandom = "0.2.9"
num = { version = "0.4.0", features = ["std", "rand", "serde"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt"] }
overload = "0.1.1"
