[package]
name = "doice_roller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm_comp = ["getrandom/js", "instant/wasm-bindgen", "doice_utils/wasm_comp"]

[dependencies]
doice_utils = { version = "0.1.0", path = "../doice_utils" }
dyn-clone = { workspace = true }
egui = { workspace = true }
getrandom = { workspace = true }
instant = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true, features = ["nightly"] }
rayon = { workspace = true, optional = true }
