[package]
name = "doice_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm_comp = []

[dependencies]
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
strsim = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "par-exec"
harness = false
